--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -10,6 +10,8 @@ jobs:
     steps:
     - name: Make HTML
       run:
-        cd sphinx
-        make html
-        cp -r build/html/* ../docs
+        cd "sphinx"
+        ls
+        pwd
+        #make html
+        #cp -r build/html/* ../docs
