--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -4,6 +4,9 @@ on:
   push:
     branches:
       - master
+defaults:
+  run:
+    working-directory: sphinx
 jobs:
   build:
     runs-on: ubuntu-latest
