--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -28,5 +28,5 @@ jobs:
       uses: JamesIves/github-pages-deploy-action@3.5.6
       with:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        BRANCH: gh-pages
-        FOLDER: docs
+        BRANCH: master
+
