--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ before_install:
     - "./miniconda.sh -b"
     - export PATH=/home/travis/miniconda2/bin:$PATH
     - conda update --yes conda
-    - sudo rm -rf /dev/shm
+    #- sudo rm -rf /dev/shm
     - sudo ln -s /run/shm /dev/shm
 
 install:
