--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ install:
     - pip install --user travis-sphinx
 
 script:
-    - travis-sphinx build
+    - travis-sphinx build --source=sphinx
 
 after_success:
     - travis-sphinx deploy
