--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ install:
 
 script:
   # Use Sphinx to make the html docs
+  - cd "sphinx"
   - make html
   # Tell GitHub not to use jekyll to compile the docs
   #- touch _build/html/.nojekyll
