--- a/.travis.yml
+++ b/.travis.yml
@@ -18,5 +18,6 @@ deploy:
   github_token: $GITHUB_TOKEN  # Set in travis-ci.org dashboard, marked secure
   keep-history: true
   on:
-    branch: gh-pages
-  local_dir: /sphinx/build/html/
+    target-branch: gh-pages
+    tags: true
+  local_dir: sphinx/build/html/
