--- a/.travis.yml
+++ b/.travis.yml
@@ -15,9 +15,9 @@ script:
 deploy:
   provider: pages
   skip_cleanup: true
-  token: $GITHUB_TOKEN  # Set in travis-ci.org dashboard, marked secure
+  github-token: $GITHUB_TOKEN  # Set in travis-ci.org dashboard, marked secure
   keep-history: true
   on:
-    target-branch: gh-pages
+    branch: master
     tags: true
   local_dir: ./sphinx/build/html/
