--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -26,7 +26,8 @@ jobs:
         make html
     - name: Deploy to Github Pages
       uses: JamesIves/github-pages-deploy-action@3.5.6
-      with:
+      env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
         BRANCH: gh-pages
         FOLDER: sphinx/build/html
