--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -26,8 +26,7 @@ jobs:
         make html
     - name: Deploy to Github Pages
       uses: JamesIves/github-pages-deploy-action@3.5.6
-      env:
-        GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
       with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
         BRANCH: gh-pages
         FOLDER: sphinx/build/html
