--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -25,8 +25,12 @@ jobs:
         pwd
         make html
     - name: Deploy to Github Pages
-      uses: JamesIves/github-pages-deploy-action@3.5.6
+      uses: peaceiris/actions-gh-pages@v3
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
-        BRANCH: gh-pages
-        FOLDER: sphinx/build/html
+        publish_dir: sphinx/build/html
+      #uses: JamesIves/github-pages-deploy-action@3.5.6
+      #with:
+      #  github_token: ${{ secrets.GITHUB_TOKEN }}
+      #  BRANCH: gh-pages
+      #  FOLDER: sphinx/build/html
