--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,7 @@ jobs:
     steps:
       - checkout
       - run:
-          name: Install dependencies
+          #name: Install dependencies
           #command: pip install -r requirements.txt
       - run:
           name: Test
